# smacro

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs
src/: lib.rs  map.rs  s.rs  set.rs
