[package]
name = "smacro"
version = "0.1.0"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "A collection of convenient Rust macros to reduce boilerplate"
readme = "README.md"
homepage = "https://github.com/saverioscagnoli/smacro"
repository = "https://github.com/saverioscagnoli/smacro"
license = "MIT"
keywords = ["macro", "string", "hashmap", "hashset", "utility"]
categories = ["rust-patterns", "development-tools"]
exclude = [
    ".gitignore",
    "Cargo.lock",
    "target/",
    "examples/",
]

[features]
default = []
set = []
map = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "demo"
path = "examples/demo.rs"